Third round of refactorings of day 4 puzzle.