@@ -1,20 +1,21 @@
 package net.bbelovic.adventofcode.day4;
 
-import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+
+import static org.junit.Assert.assertEquals;
 
 @RunWith(Parameterized.class)
-public class Day4Test {
+public class Day4PuzzleTest {
 
-    private String input;
-    private long expectedOutput;
+    private final String input;
+    private final long expectedOutput;
 
-    public Day4Test(String input, long expectedOutput) {
+    public Day4PuzzleTest(String input, long expectedOutput) {
         this.input = input;
         this.expectedOutput = expectedOutput;
     }
@@ -22,14 +23,14 @@ public class Day4Test {
     @Test
     public void
     should_compute_numeric_part_of_input() {
-        Day4 day4 = new Day4("00000");
-        long actual = day4.solve(input);
-        Assert.assertEquals(expectedOutput, actual);
+        Day4Puzzle day4 = new Day4Puzzle("00000");
+        var actual = day4.solve(input);
+        assertEquals(expectedOutput, actual);
     }
 
     @Parameterized.Parameters
     public static Collection<Object[]> testData() {
-        return Arrays.asList(new Object [][] {
+        return List.of(new Object [][] {
                 {"abcdef", 609043},
                 {"pqrstuv", 1048970},
         });
